--- a/index.html
+++ b/index.html
@@ -143,6 +143,17 @@
                             </div>
                             <div class="skills__bar skills__canva"></div> -->
                         </div>
+
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bxl-javascript skills__icon'></i>
+                                <span class="skills__name">Javascript</span>
+                            </div>
+                            <!-- <div>
+                                <span class="skills__percentage">95%</span>
+                            </div>
+                            <div class="skills__bar skills__javascript"></div> -->
+                        </div>
                     </div>
 
                     <div>
