--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi, I'am<br><span class="home__title-color">Faryota Arimaha Rizqi</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi, I'am<br><span class="home__title-color">Faryota Arimaha Rizqi</span><br> Software Engineer Student</h1>
                     <a href="#" class="button">Contact</a>
                 </div>
 
@@ -64,8 +64,9 @@
                     </div>
 
                     <div>
-                        <h2 class="about__subtitle">I'am Faryotaa</h2>
-                        <p class="about__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor atque modi quidem sapiente ipsa numquam distinctio quam deleniti, natus soluta? Laudantium perspiciatis placeat ab eligendi corporis assumenda nemo ut aut!</p>
+                        <h2 class="about__subtitle">I'am Faryota</h2>
+                        <p class="about__text">Third year student at <span class="home__title-color">Politeknik Negeri Banyuwangi</span> specializing in Front End Web Development. Driven by a passion for continuous learning and a growth mindset, I am eager to excel in the ever-evolving technology landscape.
+                        </p>
                     </div>
                 </div>
             </section>
@@ -76,7 +77,7 @@
                 <div class="skills__container bd-grid">
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit quia ab officia repellat praesentium sequi accusantium ex adipisci doloribus nesciunt placeat aut atque vel, recusandae necessitatibus saepe molestias suscipit consequuntur?</p>
+                        <p class="skills__text">As a Front End Web Developer, I have expertise in creating attractive, responsive, and functional user interfaces. I specialize in using <span class="home__title-color"> HTML, CSS, and JavaScript </span>to bring designs to life and create optimal user experiences. I also use other tools to support interesting designs such as <span class="home__title-color">Figma and Canva</span></p>
 
                         <div class="skills__data">
                             <div class="skills__names">
